--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">House Republican Campagin Commitee</a></h1>
-							<p> Committed to the fight for Minnesotan's values Manufactured by HTML5 UP.</p>
+							<h1 id="logo"><a href="index.html">House Republican
+								Campagin Commitee</a></h1>
+							<p> <b> Committed to the fight for Minnesotan's values. </b></p>
 
 						<!-- Nav -->
 							<nav id="nav">
