--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">House Republican
+							<h1 id="logo"><a href="index.html"
+
+								>House Republican
 
 								Campagin Commitee</a></h1>
-							<p> <b> Committed to the fight for Minnesotan's values. </b></p>
+							<p> <b> Committed to the fight for Minnesota's values. </b></p>
 
 						<!-- Nav -->
 							<nav id="nav">
