--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html"
 
-								>House Republican
+								>House Republican	Campagin Commitee</a></h1>
 
-								Campagin Commitee</a></h1>
+								>h2 id="logo"><a href="index.html"
+
+								>House Republican	Campagin Commitee</a></h2>
 							<p> <b> Committed to the fight for Minnesota's values. </b></p>
 
 						<!-- Nav -->
