--- a/index.html
+++ b/index.html
@@ -23,27 +23,23 @@
 
 								>HRCC</a></h1>
 
-
-
-								>House Republican	Campagin Commitee</a></h2>
 							<p> <b> Committed to the fight for Minnesota's values. </b></p>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon fa-home" href="index.html"><span>Introduction</span></a></li>
+									<li><a class="icon fa-home" href="index.html"><span>Home</span></a></li>
 									<li>
-										<a href="#" class="icon fa-bar-chart-o"><span>Dropdown</span></a>
+										<a href="#" class="icon fa-bar-chart-o"><span>Join us</span></a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
+											<li><a href="#"></a></li>
+											<li><a href="#">Employment oppertunities</a></li>
+											<li><a href="#">Volunteering oppertunites</a></li>
 											<li>
-												<a href="#">Phasellus consequat</a>
+												<a href="#">Community involvement</a>
 												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
+													<li><a href="#">Sign up for the mailing list</a></li>
+
 												</ul>
 											</li>
 											<li><a href="#">Veroeros feugiat</a></li>
@@ -161,25 +157,41 @@
 											</header>
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 											<h3>You should probably check out her work</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum malesuada.</p>
-											<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
-											Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
-											vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
-											magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in,
-											tristique at erat. Curabitur leo nibh, rutrum eu malesuada  in, tristique
-											at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna
-											tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
-											magna tempus.</p>
+											<html>
+  <head>
+    <title>Tables</title>
+  </head>
+  <body>
+    <table>
+      <thead>
+        <tr>
+          <th></th>
+          <th scope="col">Home starter hosting</th>
+          <th scope="col">Premium business hosting</th>
+          </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">Disk space</th>
+          <td>250mb</td>
+          <td>1gb</td>
+        </tr>
+        <tr>
+          <th scope="row">Bandwidth</th>
+          <td>5gb per month</td>
+          <td>50gb per month</td>
+        </tr>
+        <!-- more rows like the two above here-- >
+      </tbody>
+      <tfoot>
+        <tr>
+          <td></td>
+          <td colspan="2">Sign up now and save 10%!</td>
+        </tr>
+      </tfoot>
+    </table>
+  </body>
+</html>
 											<ul class="actions">
 												<li><a href="#" class="button icon fa-file">Continue Reading</a></li>
 											</ul>
