--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 											</li>
 										</ul>
 									</li>
-									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
+									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Candidates</span></a></li>
+									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Contribute</span></a></li>
+									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>Latest</span></a></li>
 								</ul>
 							</nav>
 
@@ -57,14 +57,14 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Gentlemen, behold! This is <strong>Strongly Typed</strong>!</h2>
+							<h2> <strong> Ensuring balance for Minnesotans </strong></h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="C:\Users\Ben\Desktop\Images>River.jpg" alt="" /></a>
 										<header>
 											<h3>Okay, so what is this?</h3>
 										</header>
