--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="C:\Users\Ben\Desktop\Images>River.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="Images/Dario Anselmo.jpg" alt="" /></a>
 										<header>
-											<h3>Okay, so what is this?</h3>
+											<h3> <b> Dario Anselmo</h3> </b>
 										</header>
-										<p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
-										by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
-										<a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+										<p> Representative Anselmo is currently serving his first term in office. He represents the city of Edina and district 49A.
+										   <p> Dario is an entrepreneur and small businessman. In 1993 he bought the Fine Line Music Café in downtown Minneapolis building it into a thriving business and a cultural institution. He also pursues commercial real estate ventures. Dario co-founded the Warehouse District Business Association in Minneapolis and served on the board of the Minneapolis Downtown Council for 12 years (from 2000 to 2012).
+                           Dario has served on the board of the Edina Education Fund and now on the board of Edina Give and Go. He has also served as president of the Depression and Bipolar Support Alliance for over 10 years, and he was a long time board member of the Minnesota Mental Health Association.
+                           Dario and his wife Jeanne live in Edina where their three children attend Edina Public Schools. </p>
+
 									</section>
 
 							</div>
