--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="Images/Dario Anselmo.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="C:\Users\Ben\Desktop\Repositories\Benz\WEBSITE\images\Dario Anselmo.jpg" alt="" /></a>
 										<header>
 											<h3> <b> Dario Anselmo</h3> </b>
 										</header>
