--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                            Dario has served on the board of the Edina Education Fund and now on the board of Edina Give and Go. He has also served as president of the Depression and Bipolar Support Alliance for over 10 years, and he was a long time board member of the Minnesota Mental Health Association.
                            Dario and his wife Jeanne live in Edina where their three children attend Edina Public Schools. </p>
 
-									</section>
+									</section> D 
 
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
