--- a/index.html
+++ b/index.html
@@ -66,27 +66,13 @@
 									<section>
 										<a href="#" class="image featured"><img src="images\Dario Anselmo.jpg" alt="" /></a>
 										<header>
-											<h3> <b> Dario Anselmo</h3> </b>
+											<h3> <b> Dario Anselmo </h3> </b>
 										</header>
 										<p> Representative Anselmo is currently serving his first term in office. He represents the city of Edina and district 49A.
 										   <p> Dario is an entrepreneur and small businessman. In 1993 he bought the Fine Line Music Café in downtown Minneapolis building it into a thriving business and a cultural institution. He also pursues commercial real estate ventures. Dario co-founded the Warehouse District Business Association in Minneapolis and served on the board of the Minneapolis Downtown Council for 12 years (from 2000 to 2012).
                            Dario has served on the board of the Edina Education Fund and now on the board of Edina Give and Go. He has also served as president of the Depression and Bipolar Support Alliance for over 10 years, and he was a long time board member of the Minnesota Mental Health Association.
                            Dario and his wife Jeanne live in Edina where their three children attend Edina Public Schools. </p>
 
-									</section> D
-
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-
-								<!-- Feature -->
-									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-										<header>
-											<h3>Nice! What is HTML5 UP?</h3>
-										</header>
-										<p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://twitter.com/ajlkn">AJ’s</a> (= me).
-										I started it as a way to both test my responsive tools and sharpen up my coding
-										and design skills a bit.</p>
 									</section>
 
 							</div>
@@ -94,13 +80,28 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images\Kathy Lohmer.jpg" alt="" /></a>
 										<header>
-											<h3>What's this built with?</h3>
-										</header>
-										<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-										sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
+												<h3> <b> Kathy Lohmer </h3> </b>
+											</header>
+											<p> Representative Kathy Lohmer is in her fourth term in the Minnesota House. She represents the communities of Bayport, Baytown Township, Grant, Lake Elmo, Lake St. Croix Beach, Lakeland, Lakeland Shores, Oak Park Heights, Pine Springs, St. Mary’s Point, Stillwater, and West Lakeland Township.
+                          As a breast-cancer survivor and the mother of a disabled child, Kathy has a passion for health and human service issues. She was a medical office administrator, and she and her husband have owned a small business for more than 30 years.
+                          Kathy and her husband, Greg, live in Stillwater. They have four adult sons and are proud grandparents. </p>
+
 									</section>
+
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+
+								<!-- Feature -->
+									<section>
+										<a href="#" class="image featured"><img src="Tony Jergens.jpg" alt="" /></a>
+										<header>
+											<h3>Tony Jergens</h3>
+										</header>
+										<p>Representative Tony Jurgens is in his first term in the Minnesota House. He represents portions of Dakota and Washington counties in the southeastern part of the Twin Cities.
+                       Tony and his wife Dawn have lived in Cottage Grove for over 23 years and they have two adult daughters. He is employed as an independent insurance agent with InsuranceWorks Agency, Inc. As a result of Tony’s extensive volunteer service to the city of Cottage Grove, in April 2016, he was presented with the Volunteer of the Year Award by the Cottage Grove mayor and city council. Among many other volunteer roles, he served as treasurer of the Cottage Grove Economic Development Authority and chair of the Cottage Grove Public Services Commission. </p>
+                 	</section>
 
 							</div>
 							<div class="col-12">
