--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images\Dario Anselmo.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images\Dario Anselmo II.jpg" alt="" /></a>
 										<header>
 											<h3> <b> Dario Anselmo </h3> </b>
 										</header>
@@ -95,7 +95,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="Tony Jergens.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images\Tony Jergens.jpg" alt="" /></a>
 										<header>
 											<h3>Tony Jergens</h3>
 										</header>
@@ -103,21 +103,11 @@
                        Tony and his wife Dawn have lived in Cottage Grove for over 23 years and they have two adult daughters. He is employed as an independent insurance agent with InsuranceWorks Agency, Inc. As a result of Tony’s extensive volunteer service to the city of Cottage Grove, in April 2016, he was presented with the Volunteer of the Year Award by the Cottage Grove mayor and city council. Among many other volunteer roles, he served as treasurer of the Cottage Grove Economic Development Authority and chair of the Cottage Grove Public Services Commission. </p>
                  	</section>
 
-							</div>
-							<div class="col-12">
-								<ul class="actions">
-									<li><a href="#" class="button icon fa-file">Tell Me More</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</section>
 
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p>Use this space for <strong>profound thoughts</strong>.<br />
-						Or an enormous ad. Whatever.</p>
+						<p>Help Minnesota stay prosperous. <b> Vote </b> Republican on November 6!</p>
 					</div>
 				</section>
 
@@ -135,20 +125,41 @@
 												<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
 												but it’s the aliens.</a></h2>
 											</header>
-											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>I mean isn't it possible?</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum eu malesuada in tristique.</p>
-											<ul class="actions">
-												<li><a href="#" class="button icon fa-file">Continue Reading</a></li>
-											</ul>
+											<html>
+  <head>
+    <title>Tables</title>
+  </head>
+  <body>
+    <table>
+      <thead>
+        <tr>
+          <th></th>
+          <th scope="col">Home starter hosting</th>
+          <th scope="col">Premium business hosting</th>
+          </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">Disk space</th>
+          <td>250mb</td>
+          <td>1gb</td>
+        </tr>
+        <tr>
+          <th scope="row">Bandwidth</th>
+          <td>5gb per month</td>
+          <td>50gb per month</td>
+        </tr>
+        <!-- more rows like the two above here-- >
+      </tbody>
+      <tfoot>
+        <tr>
+          <td></td>
+          <td colspan="2">Sign up now and save 10%!</td>
+        </tr>
+      </tfoot>
+    </table>
+  </body>
+</html>
 										</article>
 
 									<!-- Post -->
