--- a/index.html
+++ b/index.html
@@ -107,25 +107,10 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p>Help Minnesota stay prosperous. <b> Vote </b> Republican on November 6!</p>
+						<p>Help Minnesota stay prosperous. Vote Republican on November 6!</p>
 					</div>
 				</section>
 
-			<!-- Main -->
-				<section id="main">
-					<div class="container">
-						<div class="row">
-
-							<!-- Content -->
-								<div id="content" class="col-8 col-12-medium">
-
-									<!-- Post -->
-										<article class="box post">
-											<header>
-												<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
-												but it’s the aliens.</a></h2>
-											</header>
-											<html>
   <head>
     <title>Tables</title>
   </head>
