--- a/index.html
+++ b/index.html
@@ -147,15 +147,6 @@
 </html>
 										</article>
 
-									<!-- Post -->
-										<article class="box post">
-											<header>
-												<h2><a href="#">By the way, many thanks to <strong>regularjane</strong>
-												for these awesome demo photos</a></h2>
-											</header>
-											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>You should probably check out her work</h3>
-											<html>
   <head>
     <title>Tables</title>
   </head>
@@ -208,11 +199,15 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 30</span>
-																<h3><a href="#">Just another post</a></h3>
+																<span class="date">August 29th</span>
+																<h3><a href="#">Press release</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>House DFL Ads Fail Independent Fact Checks
+                                ST. PAUL, MN — Minnesota Democrats are under fire after a second independent fact-check found their political mailers
+																to contain false and deliberately misleading information.
+																Mailers funded by the Minnesota House DFL Caucus,
+																led by minority leader Melissa Hortman, have inaccurately claimed that...
+															</p>
 														</article>
 
 												</li>
@@ -221,11 +216,13 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 28</span>
-																<h3><a href="#">And another post</a></h3>
+																<span class="date">August 14th</span>
+																<h3><a href="#">Press release </a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>Speaker Daudt Statement on Primary Election:
+                                 Crown- Speaker Kurt Daudt (R-Crown) issued the following statement regarding the Primary Election results Tuesday evening.
+                                "Congratulations to all of the candidates who prevailed in today's primary election.
+                                 Our 2018 House Republican team is set for Election Day and we are energized to...</p>
 														</article>
 
 												</li>
@@ -235,10 +232,12 @@
 														<article class="box excerpt">
 															<header>
 																<span class="date">July 24</span>
-																<h3><a href="#">One more post</a></h3>
+																<h3><a href="#">Press release </a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>House Republicans Kick Off 2018 Campaign:
+                                 St. Paul, Minn.—House Republican Leaders announced a strong team of candidates Tuesday
+                                 at a mass filing event as they filed for office seeking to build on the historic accomplishments from the 2017-2018 session.
+                                 Speaker of the House Kurt Daudt (R-Crown) introduced several candidates at a press...</p>
 														</article>
 
 												</li>
