--- a/index.html
+++ b/index.html
@@ -139,20 +139,13 @@
       <tfoot>
         <tr>
           <td></td>
-          <td colspan="2">Sign up now and save 10%!</td>
-        </tr>
-      </tfoot>
-    </table>
-  </body>
+          <td colspan="2">Sign up now and save 10%!</t
 											<ul class="actions">
 												<li><a href="#" class="button icon fa-file">Continue Reading</a></li>
 											</ul>
 										</article>
 
 								</div>
-
-							<!-- Sidebar -->
-								<div id="sidebar" class="col-4 col-12-medium">
 
 									<!-- Excerpts -->
 										<section>
