--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
                                 ST. PAUL, MN — Minnesota Democrats are under fire after a second independent fact-check found their political mailers
 																to contain false and deliberately misleading information.
 																Mailers funded by the Minnesota House DFL Caucus,
-																led by minority leader Melissa Hortman, have inaccurately claimed that...
-															</p>
+																led by minority leader Melissa Hortman, have inaccurately claimed that...[Continue reading]</p>
 														</article>
 
 												</li>
@@ -140,7 +139,7 @@
 															<p>Speaker Daudt Statement on Primary Election:
                                  Crown- Speaker Kurt Daudt (R-Crown) issued the following statement regarding the Primary Election results Tuesday evening.
                                 "Congratulations to all of the candidates who prevailed in today's primary election.
-                                 Our 2018 House Republican team is set for Election Day and we are energized to...</p>
+                                 Our 2018 House Republican team is set for Election Day and we are energized to...[Continue reading]</p>
 														</article>
 
 												</li>
@@ -155,7 +154,7 @@
 															<p>House Republicans Kick Off 2018 Campaign:
                                  St. Paul, Minn.—House Republican Leaders announced a strong team of candidates Tuesday
                                  at a mass filing event as they filed for office seeking to build on the historic accomplishments from the 2017-2018 session.
-                                 Speaker of the House Kurt Daudt (R-Crown) introduced several candidates at a press...</p>
+                                 Speaker of the House Kurt Daudt (R-Crown) introduced several candidates at a press...[Continue reading]</p>
 														</article>
 
 												</li>
