--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 				<section id="footer">
 					<div class="container">
 						<header>
-							<h2>Questions or comments? <strong>Get in touch:</strong></h2>
+							<h2>Questions or comments? <strong>Contact us:</strong></h2>
 						</header>
 						<div class="row">
 							<div class="col-6 col-12-medium">
@@ -195,24 +195,18 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
+									<p>HOUSE REPUBLICAN COMMITEE OF MINNESOTA</p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon fa-home">
-													1234 Somewhere Road<br />
-													Nashville, TN 00000<br />
+													PO BOX 17400<br />
+													ST. PAUL, MN 55117 00000<br />
 													USA
 												</li>
 												<li class="icon fa-phone">
-													(000) 000-0000
+													(651)-225-8586
 												</li>
-												<li class="icon fa-envelope">
-													<a href="#">info@untitled.tld</a>
-												</li>
-											</ul>
 										</div>
 										<div class="col-6 col-12-small">
 											<ul class="icons">
