--- a/index.html
+++ b/index.html
@@ -211,16 +211,13 @@
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon fa-twitter">
-													<a href="#">@untitled</a>
-												</li>
-												<li class="icon fa-instagram">
-													<a href="#">instagram.com/untitled</a>
+													<a href="#">https://twitter.com/mnhrcc</a>
 												</li>
 												<li class="icon fa-dribbble">
 													<a href="#">dribbble.com/untitled</a>
 												</li>
 												<li class="icon fa-facebook">
-													<a href="#">facebook.com/untitled</a>
+													<a href="#">https://www.facebook.com/MNHRCC/</a>
 												</li>
 											</ul>
 										</div>
@@ -231,12 +228,10 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; PREPARED AND PAID FOR BY THE HRCC: 525 PARK STREET  SUITE 245  ST. PAUL, MN 55103
 						</ul>
 					</div>
 				</section>
-
-		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
