--- a/index.html
+++ b/index.html
@@ -56,10 +56,13 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2> <strong> Ensuring balance for Minnesotans </strong></h2>
+							<h2> <strong> Ensuring balance for the North Star State </strong></h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
+
+								<section>
+									<a href="#" class="image featured"><img src="images\GOP.jpg" alt="" /></a>
 
 								<!-- Feature -->
 									<section>
@@ -213,9 +216,6 @@
 												<li class="icon fa-twitter">
 													<a href="#">https://twitter.com/mnhrcc</a>
 												</li>
-												<li class="icon fa-dribbble">
-													<a href="#">dribbble.com/untitled</a>
-												</li>
 												<li class="icon fa-facebook">
 													<a href="#">https://www.facebook.com/MNHRCC/</a>
 												</li>
@@ -228,7 +228,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; PREPARED AND PAID FOR BY THE HRCC: 525 PARK STREET  SUITE 245  ST. PAUL, MN 55103
+							<li> <i> PREPARED AND PAID FOR BY THE HRCC: 525 PARK STREET SUITE 245 ST. PAUL, MN 55103 <i/>
 						</ul>
 					</div>
 				</section>
