--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 										<header>
 											<h3> <b> Dario Anselmo </h3> </b>
 										</header>
-										<p> Representative Anselmo is currently serving his first term in office. He represents the city of Edina and district 49A.
-										   <p> Dario is an entrepreneur and small businessman. In 1993 he bought the Fine Line Music Café in downtown Minneapolis building it into a thriving business and a cultural institution. He also pursues commercial real estate ventures. Dario co-founded the Warehouse District Business Association in Minneapolis and served on the board of the Minneapolis Downtown Council for 12 years (from 2000 to 2012).
+										    <p>Representative Anselmo is currently serving his first term in office. He represents the city of Edina and district 49A.
+										       Dario is an entrepreneur and small businessman. In 1993 he bought the Fine Line Music Café in downtown Minneapolis building it into a thriving business and a cultural institution. He also pursues commercial real estate ventures. Dario co-founded the Warehouse District Business Association in Minneapolis and served on the board of the Minneapolis Downtown Council for 12 years (from 2000 to 2012).
                            Dario has served on the board of the Edina Education Fund and now on the board of Edina Give and Go. He has also served as president of the Depression and Bipolar Support Alliance for over 10 years, and he was a long time board member of the Minnesota Mental Health Association.
                            Dario and his wife Jeanne live in Edina where their three children attend Edina Public Schools. </p>
 
@@ -106,7 +106,9 @@
 		                      	<!-- Banner -->
 			                    	<section id="banner">
 						                <p>Help Minnesota stay prosperous. Vote Republican on November 6!</p>
-				                  	</div>
+
+														<div class="row aln-center">
+															<div class="col-4 col-6-medium col-12-small">
 
 														<section>
 															 <a href="#" class="image featured"><img src="images\GOP.jpg" alt="" /></a>
