--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
 			                    	<section id="banner">
 						                <p>Help Minnesota stay prosperous. Vote Republican on November 6!</p>
 
+														<!-- Main -->
+																	<section id="main">
+																		<div class="container">
+																			<div class="row">
+
+																				<!-- Content -->
+																					<div id="content" class="col-8 col-12-medium">
+
+
 					<!-- Excerpt -->
 			 		<article class="box excerpt">
 					<header>
@@ -131,11 +140,10 @@
     			<h3><a href="#">Press release </a></h3>
 					</header>
 					<p>Speaker Daudt Statement on Primary Election:
-          Crown- Speaker Kurt Daudt (R-Crown) issued the following statement regarding the Primary Election results Tuesday evening.
-         "Congratulations to all of the candidates who prevailed in today's primary election.
-          Our 2018 House Republican team is set for Election Day and we are energized to...[Continue reading]</p>
-
-									</article>
+                                 Crown- Speaker Kurt Daudt (R-Crown) issued the following statement regarding the Primary Election results Tuesday evening.
+                                "Congratulations to all of the candidates who prevailed in today's primary election.
+                                 Our 2018 House Republican team is set for Election Day and we are energized to...[Continue reading]</p>
+														</article>
 
 												</li>
 												<li>
