--- a/index.html
+++ b/index.html
@@ -102,17 +102,20 @@
                        Tony and his wife Dawn have lived in Cottage Grove for over 23 years and they have two adult daughters. He is employed as an independent insurance agent with InsuranceWorks Agency, Inc. As a result of Tony’s extensive volunteer service to the city of Cottage Grove, in April 2016, he was presented with the Volunteer of the Year Award by the Cottage Grove mayor and city council. Among many other volunteer roles, he served as treasurer of the Cottage Grove Economic Development Authority and chair of the Cottage Grove Public Services Commission. </p>
 
 
-		                      	<!-- Banner -->
-			                    	<section id="banner">
-						                <p>Help Minnesota stay prosperous. Vote Republican on November 6!</p>
+											 <!-- Banner -->
+ <section id="banner">
+	 <div class="container">
+		 <p>Help Minnesota stay prosperous. Vote Republican November 6th!</p>
+	 </div>
+ </section>
 
-														<!-- Main -->
-																	<section id="main">
-																		<div class="container">
-																			<div class="row">
+									    <!-- Main -->
+										  <section id="main">
+											<div class="container">
+							  			<div class="row">
 
-																				<!-- Content -->
-																					<div id="content" class="col-8 col-12-medium">
+											<!-- Content -->
+											<div id="content" class="col-8 col-12-medium">
 
 
 					<!-- Excerpt -->
