--- a/index.html
+++ b/index.html
@@ -100,53 +100,73 @@
 										</header>
 										<p>Representative Tony Jurgens is in his first term in the Minnesota House. He represents portions of Dakota and Washington counties in the southeastern part of the Twin Cities.
                        Tony and his wife Dawn have lived in Cottage Grove for over 23 years and they have two adult daughters. He is employed as an independent insurance agent with InsuranceWorks Agency, Inc. As a result of Tony’s extensive volunteer service to the city of Cottage Grove, in April 2016, he was presented with the Volunteer of the Year Award by the Cottage Grove mayor and city council. Among many other volunteer roles, he served as treasurer of the Cottage Grove Economic Development Authority and chair of the Cottage Grove Public Services Commission. </p>
+                  <section>
 
+								</div>
+													<div class="col-12">
+														<ul class="actions">
+															<li><a href="#" class="button icon fa-file">Tell Me More</a></li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</section>
 
-											 <!-- Banner -->
+		   	 <!-- Banner -->
  <section id="banner">
 	 <div class="container">
 		 <p>Help Minnesota stay prosperous. Vote Republican November 6th!</p>
 	 </div>
  </section>
 
-									    <!-- Main -->
-										  <section id="main">
-											<div class="container">
-							  			<div class="row">
+			   <!-- Main -->
+<section id="main">
+	<div class="container">
+		<div class="row">
 
-											<!-- Content -->
-											<div id="content" class="col-8 col-12-medium">
+					<!-- Content -->
+						<div id="content" class="col-8 col-12-medium">
 
+					 	</ul>
+					</article>
 
-					<!-- Excerpt -->
-			 		<article class="box excerpt">
-					<header>
-					<span class="date">August 29th</span>
-					<h3><a href="#">Press release</a></h3>
-					</header>
-					<p>House DFL Ads Fail Independent Fact Checks
-          ST. PAUL, MN — Minnesota Democrats are under fire after a second independent fact-check found their political mailers
-					to contain false and deliberately misleading information.
-					Mailers funded by the Minnesota House DFL Caucus,
-					led by minority leader Melissa Hortman, have inaccurately claimed that...[Continue reading]</p>
+			</div>
 
+		<!-- Sidebar -->
+			<div id="sidebar" class="col-4 col-12-medium">
 
-									</article>
+				<!-- Excerpts -->
+												<section>
+													<ul class="divided">
+														<li>
 
-												</li>
-												<li>
+     	                          <!-- Excerpt -->
+			 		                       <article class="box excerpt">
+				                         	<header>
+			                          		<span class="date">August 29th</span>
+			                            		<h3><a href="#">Press release</a></h3>
+				                          	</header>
+			                          		<p>House DFL Ads Fail Independent Fact Checks
+                                       ST. PAUL, MN — Minnesota Democrats are under fire after a second independent fact-check found their political mailers
+				                             	to contain false and deliberately misleading information.
+			                             		Mailers funded by the Minnesota House DFL Caucus,
+		                            			led by minority leader Melissa Hortman, have inaccurately claimed that...[Continue reading]</p>
+                                	</article>
 
-					<!-- Excerpt -->
-					<article class="box excerpt">
-					<header>
-					<span class="date">August 14th</span>
-    			<h3><a href="#">Press release </a></h3>
-					</header>
-					<p>Speaker Daudt Statement on Primary Election:
+											  	</li>
+												  <li>
+
+					                  <!-- Excerpt -->
+				                    	<article class="box excerpt">
+				                      	<header>
+				                        	<span class="date">August 14th</span>
+    		                        	<h3><a href="#">Press release </a></h3>
+					                      </header>
+				                      	<p>Speaker Daudt Statement on Primary Election:
                                  Crown- Speaker Kurt Daudt (R-Crown) issued the following statement regarding the Primary Election results Tuesday evening.
                                 "Congratulations to all of the candidates who prevailed in today's primary election.
                                  Our 2018 House Republican team is set for Election Day and we are energized to...[Continue reading]</p>
-														</article>
+														   </article>
 
 												</li>
 												<li>
@@ -167,10 +187,16 @@
 											</ul>
 										</section>
 
-									<!-- Highlights -->
-										<section>
-											<ul class="divided">
-												<li>
+								           	<!-- Highlights -->
+								           		<section>
+										          	<ul class="divided">
+											        	<li>
+                           	</ul>
+										     </article>
+
+							       	</li>
+						      	</ul>
+					      	</section>
 
 			<!-- Footer -->
 				<section id="footer">
@@ -235,6 +261,8 @@
 						</ul>
 					</div>
 				</section>
+
+  	</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
