--- a/index.html
+++ b/index.html
@@ -132,10 +132,8 @@
 
 			</div>
 
-		<!-- Sidebar -->
-			<div id="sidebar" class="col-4 col-12-medium">
 
-				<!-- Excerpts -->
+	   			<!-- Excerpts -->
 												<section>
 													<ul class="divided">
 														<li>
@@ -202,7 +200,7 @@
 				<section id="footer">
 					<div class="container">
 						<header>
-							<h2>Questions or comments? <strong>Contact us:</strong></h2>
+							<h2><strong>Contact us:</strong></h2>
 						</header>
 						<div class="row">
 							<div class="col-6 col-12-medium">
